# stock-pipeline

./: pyproject.toml
stock_pipeline/: app.py
stock_pipeline/libs/: stockdata.py
